# verse-pdf-buddy

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: .env.example  .gitignore  config.py  main.py  pyproject.toml  requirements.txt  setup_env.sh
backend/core/: config.py
backend/services/: embeddings.py  llm_service.py  setup_vector_search_index.py  vector_db.py
backend/static/: index.html
backend/static/assets/: index-BBtZ0AQg.js  index-DQcLqdu_.css
backend/utils/: format_request.py  pdf_reader.py
src/: App.tsx  index.css
src/components/: ChatInterface.tsx  DisclaimerDialog.tsx  FileUpload.tsx  Message.tsx  PDFViewer.tsx  ReferenceList.tsx
src/pages/: Index.tsx
src/services/: api.ts
src/types/: index.ts
